# desyl

./: .gitignore  CMakeLists.txt  Doxyfile  Pipfile  README.md  benchmark.py  manual-log.txt  run_dt.py  simplify_tree.py  summary.py  test.py  train_dt.py
apps/: CMakeLists.txt  desyl.cpp
example-solutions/: elem.sep  fortytwo1.sep  fortytwo3.sep  four_swap.sep  frame.sep  frame_test.sep  free.sep  listfree.sep  malloc.sep  max.sep  maxx.sep  min.sep  mk_empty.sep  notsure.sep  nullnotlval.sep  open.sep  pick.sep  predicate_parse.sep  three_notsure.sep  three_pick.sep  three_swap.sep  treefree.sep  write.sep
examples/: INDEX.md  elem.sep  empty.sep  fortytwo1.sep  fortytwo2.sep  fortytwo3.sep  four_swap.sep  frame.sep  frame_test.sep  free.sep  hilo.sep  hilodif.sep  index.md  listcopy.sep  listfree.sep  listmorph.sep  malloc.sep  max.sep  maxx.sep  min.sep  mk_empty.sep  notsure.sep  nullnotlval.sep  open.sep  pick.sep  predicate_parse.sep  swap.sep  three_max.sep  three_notsure.sep  three_pick.sep  three_swap.sep  treeflatten.sep  treefree.sep  urk.sep  write.sep
include/desyl/: ast.hpp  desyllib.hpp
src/: CMakeLists.txt  ast.cpp  contex.hpp  context.cpp  desyllib.cpp  grammar.cpp  grammar.hpp  overload.hpp  rules.cpp  rules.hpp  synthesis.cpp  synthesis.hpp
src/ast/: CMakeLists.txt  ast.cpp
src/context/: CMakeLists.txt  context.cpp
src/include/: context.hpp  grammar.hpp  synthesis.hpp
src/parser/: CMakeLists.txt  grammar.cpp
src/synthesis/: CMakeLists.txt  goal.cpp  rules.cpp  synthesis.cpp  synthesis_old.cpp
src/synthesis/proof_searchers/: CMakeLists.txt  breadth_first.cpp  breadth_first.hpp  decision_forest_heuristic.cpp  decision_forest_heuristic.hpp  depth_first.cpp  depth_first.hpp  goal_heuristic_search.cpp  goal_heuristic_search.hpp  guided.cpp  guided.hpp  heuristic_search.cpp  heuristic_search.hpp  priority_queue.cpp  priority_queue.hpp  proof_searcher.hpp  proof_tree.cpp  proof_tree.hpp  rule_heuristic.cpp  rule_heuristic.hpp  rule_heuristic_search.cpp  rule_heuristic_search.hpp  suslik_cost.cpp  suslik_cost.hpp  whole_tree.cpp  whole_tree.hpp
src/synthesis/rules/: CMakeLists.txt  all_rules.cpp  all_rules.hpp  branch.cpp  branch.hpp  emp.cpp  emp.hpp  frame.cpp  frame.hpp  generic_continuations.cpp  generic_continuations.hpp  heap_unify.cpp  pick.cpp  pick.hpp  post_invalid.hpp  pure_frame.cpp  pure_unify.cpp  read.cpp  read.hpp  rules.cpp  rules.hpp  subst_right.hpp  substitution.cpp  substitution.hpp  write.cpp  write.hpp
src/synthesis/rules/failures/: CMakeLists.txt  failure.hpp  post_inconsistent.cpp  post_inconsistent.hpp  post_invalid.cpp  post_invalid.hpp  pre_inconsistent.cpp  pre_inconsistent.hpp  set_size.cpp  set_size.hpp
src/synthesis/rules/generic_continuations/: CMakeLists.txt  empty_continuation.cpp  empty_continuation.hpp  generic_continuations.hpp  identity_continuation.cpp  identity_continuation.hpp
src/synthesis/rules/heap_rewrites/: CMakeLists.txt  emp.cpp  emp.hpp  frame.cpp  frame.hpp
src/synthesis/rules/predicates/: CMakeLists.txt  open.cpp  open.hpp
src/synthesis/rules/pure_rewrites/: CMakeLists.txt  expand_implied.cpp  expand_implied.hpp  null_not_lval.cpp  null_not_lval.hpp  pure_frame.cpp  pure_frame.hpp  reflexivity.cpp  reflexivity.hpp  true_elision.cpp  true_elision.hpp
src/synthesis/rules/recursion/: CMakeLists.txt  abduce_call.cpp  abduce_call.hpp  call.cpp  call.hpp  close.cpp  close.hpp  open.cpp  open.hpp  predicates.hpp
src/synthesis/rules/statements/: CMakeLists.txt  alloc.cpp  alloc.hpp  branch.cpp  branch.hpp  free.cpp  free.hpp  read.cpp  read.hpp  write.cpp  write.hpp
src/synthesis/rules/substitution/: CMakeLists.txt  heap_unify.cpp  heap_unify.hpp  pick.cpp  pick.hpp  pure_unify.cpp  pure_unify.hpp  subst_right.cpp  subst_right.hpp  substitution.cpp  substitution.hpp  unification.cpp  unification.hpp
